# ott-platform

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  ROADMAP.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_bookmark_dismissed_at_and_unique_constraint.py  003_add_viewing_time_limits.py  004_add_performance_indexes.py  005_subscription_entitlements_tvod.py  006_analytics_events_and_query_jobs.py  007_tstv_schema.py
backend/app/: config.py  database.py  dependencies.py  limiter.py  main.py
backend/app/models/: __init__.py  analytics.py  catalog.py  embedding.py  entitlement.py  epg.py  notification.py  stream_sessions.py  tstv.py  user.py  viewing.py  viewing_time.py
backend/app/routers/: admin.py  analytics.py  auth.py  catalog.py  content_analytics.py  drm.py  epg.py  notifications.py  offers.py  parental_controls.py  recommendations.py  tstv.py  viewing.py  viewing_time.py
backend/app/schemas/: admin.py  analytics.py  auth.py  catalog.py  entitlement.py  epg.py  parental_controls.py  recommendation.py  tstv.py  viewing.py  viewing_time.py
backend/app/seed/: __init__.py  run_seeds.py  seed_analytics.py  seed_bookmarks.py  seed_catalog.py  seed_embeddings.py  seed_entitlements.py  seed_epg.py  seed_tstv.py  seed_users.py  seed_viewing_time.py
backend/app/services/: analytics_service.py  auth_service.py  bookmark_service.py  catalog_service.py  drm_service.py  (+13 more)
mcp-server/: .env.example  README.md  TOOLS.md  pyproject.toml
(+252 files in other folders)
