[project]
name = "ott-mcp-server"
version = "0.1.0"
description = "MCP server for OTT platform content metadata"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.scripts]
ott-mcp = "ott_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ott_mcp"]
